--- a/README.rdoc
+++ b/README.rdoc
@@ -2,9 +2,7 @@
 
 Lib.js = Frontend build tool + lazyload js tool
 
-See qunit example at http://benz303.github.com/lib.js
-
-Lib.js support:
+Feature:
 
 lazyload css and js files (base on LazyLoad.js)
 css, js and images files
@@ -12,6 +10,15 @@ sass, scss, compass and coffeescript files
 local files and remote files
 custom ruby script
 minify css and js files (base on sass and uglifier)
+
+Support Filetype:
+
+.css    -   stylesheet
+.js     -   javascript
+.sass   -   sass
+.scss   -   scss
+.coffee -   coffeescript
+.rb     -   ruby
 
 == Example
 
@@ -33,8 +40,6 @@ minify css and js files (base on sass and uglifier)
   lib('jquery underscore', function(){
     // use jquery and underscore to do sth.
   });
-  
-More Options see https://github.com/benz303/lib.js/blob/gh-pages/example.yml
 
 == Getting Started
 
